# hu-hitblow

./: .gitignore  AGENT.md  hello.py  pyproject.toml  worksheet-week1.md  worksheet-week2.md
.claude/: launch.json
GUIplay/: app.py  gui.py  routes.py  server.py  vs_store.py
GUIplay/deploy/: hitblow.service  nginx-hitblow.conf
GUIplay/static/css/: style.css
GUIplay/static/js/: game.js  vs.js
GUIplay/templates/: index.html  menu.html  vs_game.html  vs_lobby.html
src/hitblow/: _game.py  core.py  game.py  score.py
src/hitblow/web/: __init__.py  app.py  routes.py  server.py  vs_store.py
src/hitblow/web/static/css/: style.css
src/hitblow/web/static/js/: game.js  vs.js
src/hitblow/web/templates/: difficulty.html  menu.html  vs_game.html  vs_lobby.html
tests/: test_core.py
todo/: 01-gui-implementation.md  02-answer-decision.md  README.md
