[project]
name = "hitblow"
version = "0.1.0"
description = "チームで育てる Hit & Blow ゲーム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
]

# 第3回でコメントを外す：`hitblow` コマンドが使えるようになる
# [project.scripts]
# hitblow = "hitblow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitblow"]

[dependency-groups]
dev = ["pytest>=8"]
