[project]
name = "hitblow"
version = "0.1.0"
description = "チームで育てる Hit & Blow ゲーム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
]

# `hitblow` … CLI（1人プレイ）,  `hitblow_server` … GUI サーバー
[project.scripts]
hitblow = "hitblow.cli:main"
hitblow_server = "hitblow.web.server:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitblow"]
# GUI のテンプレート / 静的ファイル（.html/.css/.js）も wheel に含める
artifacts = [
    "src/hitblow/web/templates/**",
    "src/hitblow/web/static/**",
]

[dependency-groups]
dev = ["pytest>=8"]
